# finderbot

./: CMakeLists.txt  i2c_master.c  main.c  package.xml  servo.c  setup.sh
Atmega32u4_Code/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  Adafruit_Sensor.h  FIMU_ADXL345.cpp  FIMU_ADXL345.h  FIMU_ITG3200.cpp  FIMU_ITG3200.h  FreeRTOSConfig.h  FreeSixIMU.cpp  FreeSixIMU.h  Makefile  PID_v1.cpp  Wire.cpp  Wire.h  hooks.c  i2c_master.cpp  i2c_master.h  imu.cpp  imu.h  ir.cpp  ir.h  main.c  main.cpp  main.elf  main.h  main.hex  motor.cpp  motor.h  pid.cpp  pid.h  spi.cpp  spi.h  timing.cpp  timing.h  twi.c  uart.cpp  uart.h  variantHooks.cpp
Atmega32u4_Code/Archive/: CommunicationUtils.cpp  CommunicationUtils.h  DebugUtils.h  Makefile
DevBoard/avr_breakout_board/: avr_breakout_board.ino
FinderBot_Gazebo/: bot_in_a_box.world  demo.world  free_bot.world  loops.world  simple_maze.world
FinderBot_Gazebo/Chassis/: model.sdf
FinderBot_Gazebo/Finderbot_Lidar/: model.config  model.sdf
FinderBot_Gazebo/Hokuyo/: hokuyo_utm30lx.urdf.xacro
FinderBot_Gazebo/finderbot_model/: model.config
FinderBot_Gazebo/hokuyo_utm30lx/: hokuyo_utm30lx.sdf
FinderBot_Gazebo/hokuyo_utm30lx/hokuyo_utm30lx/: hokuyo_utm30lx.sdf  model.config
FinderBot_Gazebo/noisy_imu/: model.sdf
HbridgeDriver/: HbridgeDriver.c
HbridgeDriver/HbridgeDriver/: HbridgeDriver.ino
ModuleConnector-rpi-1.4.2/: CHANGELOG.md  servo.c
ModuleConnector-rpi-1.4.2/dep/: buildInfo.properties
ModuleConnector-rpi-1.4.2/doc/html/: _c_h_a_n_g_e_l_o_g_8md.xhtml  _data_8hpp.xhtml  _data_8hpp_source.xhtml  _data_player_8hpp.xhtml  _data_player_8hpp_source.xhtml  _data_reader_8hpp.xhtml  _data_reader_8hpp_source.xhtml  _data_recorder_8hpp.xhtml  _data_recorder_8hpp_source.xhtml  _l_i_c_e_n_s_e_8md.xhtml  _m_c_8md.xhtml  _module_connector_8hpp.xhtml  _module_connector_8hpp_source.xhtml  _preferred_split_size_8hpp.xhtml  _preferred_split_size_8hpp_source.xhtml  _recording_options_8hpp.xhtml  _recording_options_8hpp_source.xhtml  _x2_m200_8hpp.xhtml  _x2_m200_8hpp_source.xhtml  _x4_m200_8hpp.xhtml  _x4_m200_8hpp_source.xhtml  _x4_m300_8hpp.xhtml  _x4_m300_8hpp_source.xhtml  _x_e_p_8hpp.xhtml  _x_e_p_8hpp_source.xhtml  abbreviations.xhtml  abbreviations_8md.xhtml  annotated.xhtml  changelog.xhtml  class_xe_thru_1_1_baseband_ap_data-members.xhtml  class_xe_thru_1_1_baseband_ap_data.xhtml  class_xe_thru_1_1_baseband_iq_data-members.xhtml  class_xe_thru_1_1_baseband_iq_data.xhtml  class_xe_thru_1_1_data_player-members.xhtml  class_xe_thru_1_1_data_player.xhtml  class_xe_thru_1_1_data_reader-members.xhtml  class_xe_thru_1_1_data_reader.xhtml  class_xe_thru_1_1_data_recorder-members.xhtml  class_xe_thru_1_1_data_recorder.xhtml  class_xe_thru_1_1_module_connector-members.xhtml  (+106 more)
ModuleConnector-rpi-1.4.2/examples/: Makefile
ModuleConnector-rpi-1.4.2/python27-arm-linux-gnueabihf/pymoduleconnector/: moduleconnector.py
ModuleConnector-rpi-1.4.2/python34-arm-linux-gnueabihf/pymoduleconnector/: __init__.py  version.py
ModuleConnector-rpi-1.4.3/: CHANGELOG.md
ModuleConnector-rpi-1.4.3/doc/html/: _c_h_a_n_g_e_l_o_g_8md.xhtml  _data_8hpp.xhtml  _data_8hpp_source.xhtml  _data_player_8hpp.xhtml  _data_player_8hpp_source.xhtml  _data_reader_8hpp.xhtml  _data_reader_8hpp_source.xhtml  _data_recorder_8hpp.xhtml  _data_recorder_8hpp_source.xhtml  _l_i_c_e_n_s_e_8md.xhtml  _m_c_8md.xhtml  _module_connector_8hpp.xhtml  _module_connector_8hpp_source.xhtml  _preferred_split_size_8hpp.xhtml  _preferred_split_size_8hpp_source.xhtml  _recording_options_8hpp.xhtml  _recording_options_8hpp_source.xhtml  _x2_m200_8hpp.xhtml  _x2_m200_8hpp_source.xhtml  _x4_m200_8hpp.xhtml  _x4_m200_8hpp_source.xhtml  _x4_m300_8hpp.xhtml  _x4_m300_8hpp_source.xhtml  _x_e_p_8hpp.xhtml  _x_e_p_8hpp_source.xhtml  abbreviations.xhtml  abbreviations_8md.xhtml  annotated.xhtml  changelog.xhtml  class_xe_thru_1_1_baseband_ap_data-members.xhtml  class_xe_thru_1_1_baseband_ap_data.xhtml  class_xe_thru_1_1_baseband_iq_data-members.xhtml  class_xe_thru_1_1_baseband_iq_data.xhtml  class_xe_thru_1_1_data_player-members.xhtml  class_xe_thru_1_1_data_player.xhtml  class_xe_thru_1_1_data_reader-members.xhtml  class_xe_thru_1_1_data_reader.xhtml  class_xe_thru_1_1_data_recorder-members.xhtml  class_xe_thru_1_1_data_recorder.xhtml  class_xe_thru_1_1_module_connector-members.xhtml  (+106 more)
ModuleConnector-rpi-1.4.3/examples/: Makefile  uwb.cpp
ModuleConnector-rpi-1.4.3/python34-arm-linux-gnueabihf/pymoduleconnector/: version.py
audio/: audio_interface.c  audio_interface.h
hello_world/: Makefile  main.c
imu_driver/: FreeSixIMU.h  imu_driver.cpp  imu_driver.ino
include/finderbot/: DistanceGrid.h  IR_Sensor.cpp  IR_Sensor.h  exploration.h  global_map_builder.h  ir_sensor.h  map_utils.h  mapping.h  path_execution.h  path_execution_node.h  planner.h  ray_caster.h  servo.h  spi.h  uwb.h
include/finderbot/UWB/: Data.hpp  xtid.h
launch/: auto.launch  demo.launch  full_finderbot.launch  map_box.launch  map_move.launch  map_only.launch  mini_map.launch  real_world_auto.launch  real_world_manual.launch  test_path_exec.launch  test_spi.launch
msg/: Ir.msg  NewHits.msg  PF_Input.msg  UWB_data.msg
src/: DistanceGrid.cpp  IR_Sensor.cpp  SLAM_node.cpp  a.out  a_star.cpp  a_star_test.cpp  distance_grid_test.cpp  dummy_map_node.cpp  exploration.cpp  exploration_test.cpp  explorer_node.cpp  global_map_builder.cpp  global_map_node.cpp  ir_node.cpp  mapping.cpp  mapping_node.cpp  path_execution.cpp  path_execution_node.cpp  planner.cpp  ray_caster.cpp  servo.c  servo.cpp  simple_motion_node.cpp  spi_node.cpp  test.txt  test_path_exec_node.cpp  transform_node.cpp  uwb.cpp  uwb_main.cpp  uwb_popen_node.cpp  uwb_scan_client_node.cpp  uwb_scan_node.cpp
srv/: GetMap.srv  UWBScan.srv  getPath.srv
wifi_direct/: a.out  data_transmission.c  data_transmission.h  wifi_connect.c  wifi_connect.h
wifi_direct/test/: connect_base.c  connect_robot.c  test_main.c
wiringPi/devLib/: libwiringPiDev.so.2.0
wiringPi/gpio/: gpio
wiringPi/wiringPi/: libwiringPi.so.2.0  wiringPi.c  wiringPiSPI.c
(+881 files in other folders)
